<resources>
    <string name="app_name">Six Points</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="spinner_titleThen">Parking Lots</string>
    <string name="prefs">Settings</string>
    <string name="site">sixhundredproints.appspot.com</string>
    <string name="curLot">Lot:</string>
    <string name="sug">Best:</string>
    <string name="rating">Rating:</string>
    <string name="ratehint">Rating of lot availability</string>
    <string name="lothint">Lot you selected</string>
    <string name="besthint">Suggest lot to park in</string>
    <string name="website">Visit us</string>
    <string name="mapDescript">Map of UB North</string>

    <string-array name="map_array">
        <item>Jacobs A</item>
        <item>Jarvis B</item>
        <item>Jarvis C</item>
        <item>Jarvis A</item>
        <item>Jarvis B</item>
        <item>Jarvis A</item>
        <item>Baird A</item>
        <item>Baird B</item>
        <item>Cooke A</item>
        <item>Cooke B</item>
        <item>Furnas</item>
        <item>Fronczak A</item>
        <item>Fronczak B</item>
        <item>Governors A</item>
        <item>Governors B</item>
        <item>Governors C</item>
        <item>Governors D</item>
        <item>Governors E</item>
        <item>Hochstetter A</item>
        <item>Hochstetter B</item>
        <item>Slee A</item>
        <item>Slee B</item>
        <item>Special Events</item>
    </string-array>

    <string-array name="hour_array">
        <item>12</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
    </string-array>

    <string-array name="minute_array">
        <item>00</item>
        <item>30</item>
    </string-array>

    <string-array name="apm_array">
        <item>AM</item>
        <item>PM</item>>
    </string-array>

    <string-array name="day_array">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>

    <string-array name="month_array">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string name="title_activity_start">Start</string>
</resources>
