<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Main"
    android:background="#2f2e2d">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:weightSum="1"
        android:id="@+id/outputLayout">

        <EditText
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:id="@+id/curLotText"
            android:background="#2f2e2d"
            android:textColor="#fffa00"
            android:textSize="20sp"
            android:text="@string/curLot"
            android:hint="@string/lothint"
            android:editable="false"/>

        <EditText
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:id="@+id/curLotValueText"
            android:background="#2f2e2d"
            android:textColor="#fffa00"
            android:textSize="20sp"
            android:hint="@string/lothint"
            android:editable="false"/>

        <EditText
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:id="@+id/ratingText"
            android:background="#2f2e2d"
            android:textColor="#fffa00"
            android:textSize="20sp"
            android:text="@string/rating"
            android:hint="@string/ratehint"
            android:editable="false"/>

        <EditText
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:id="@+id/ratingValueText"
            android:background="#2f2e2d"
            android:textColor="#fffa00"
            android:textSize="20sp"
            android:editable="false"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:weightSum="1"
        android:id="@+id/suggestLayout"
        android:layout_marginTop="40dp">

        <EditText
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:id="@+id/sugLotText"
            android:background="#2f2e2d"
            android:textColor="#fffa00"
            android:textSize="20sp"
            android:text="@string/sug"
            android:hint="@string/besthint"
            android:editable="false"/>

        <EditText
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:id="@+id/sugLotValueText"
            android:background="#2f2e2d"
            android:textColor="#fffa00"
            android:textSize="20sp"
            android:editable="false"/>

        <EditText
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:id="@+id/rateText"
            android:background="#2f2e2d"
            android:textColor="#fffa00"
            android:textSize="20sp"
            android:text="@string/rating"
            android:hint="@string/ratehint"
            android:editable="false"/>

        <EditText
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:id="@+id/rateValueText"
            android:background="#2f2e2d"
            android:textColor="#fffa00"
            android:textSize="20sp"
            android:editable="false"/>

    </LinearLayout>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/mapSpinner"
        android:spinnerMode="dropdown"
        android:background="#2f2e2d"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="80dp">
</Spinner>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:weightSum="1"
            android:id="@+id/dateLayout"
            android:layout_marginTop="120dp">

            <Spinner
                android:layout_width="35dp"
                android:layout_height="40dp"
                android:id="@+id/hourSpinner"
                android:spinnerMode="dropdown"
                android:background="#282726"
                android:layout_marginBottom="38dp">
            </Spinner>

            <Spinner
                android:layout_width="35dp"
                android:layout_height="40dp"
                android:id="@+id/minuteSpinner"
                android:spinnerMode="dropdown"
                android:background="#282726"
                android:layout_marginBottom="38dp">
            </Spinner>

            <Spinner
                android:layout_width="45dp"
                android:layout_height="40dp"
                android:id="@+id/apmSpinner"
                android:spinnerMode="dropdown"
                android:background="#282726"
                android:layout_marginBottom="38dp">
            </Spinner>

            <Spinner
                android:layout_width="110dp"
                android:layout_height="40dp"
                android:id="@+id/daySpinner"
                android:spinnerMode="dropdown"
                android:background="#282726"
                android:layout_marginBottom="38dp">
            </Spinner>

            <Spinner
                android:layout_width="105dp"
                android:layout_height="40dp"
                android:id="@+id/monthSpinner"
                android:spinnerMode="dropdown"
                android:background="#282726"
                android:layout_marginBottom="38dp">
            </Spinner>

        </LinearLayout>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/horizontalScrollView"
        android:clickable="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="12dp"
        android:layout_marginTop="160dp">

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/imageView"
                android:background="@drawable/map"
                android:contentDescription="@string/mapDescript"
                android:layout_marginBottom="0dp" />
        </ScrollView>
    </HorizontalScrollView>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:text="@string/site"
        android:textSize="12sp"
        android:layout_alignBottom="@+id/horizontalScrollView"
        android:layout_centerHorizontal="true"
        android:textColor="#fffa00"
        android:editable="false"
        android:hint="@string/website"
        android:layout_marginBottom="-25dp" />

</RelativeLayout>
